--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         </section>
     </div>
 
+    <!-- Add this line right before the script tag -->
+    <p>Visitor Count: <span id="visitorCount">Loading...</span></p>
+	
     <!-- JavaScript to update the visitor count -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
