--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li>Mitigated significant security risks by leading a company-wide project to standardize internet-facing ACLs. Secured approval for additional resources and successfully implemented a unified approach, enhancing security and mitigating millions in potential losses.</li>
                 <li>Saved millions annually by designing and implementing a project SLA tracking dashboard accessible to all stakeholders, improving transparency, enhancing relationships with subsidiaries, and ensuring project deadlines were met. The initiative helped prevent subsidiaries from reclaiming network management, preserving cost efficiencies for the organization.</li>
                 <li>Averted millions in potential financial and reputation losses by redesigning the C-Level video network to enhance resiliency.</li>
-                <li>Mentored a team member through a challenging acquisition integration, enabling them to successfully generate $50k per day in new business revenue.TEST</li>
+                <li>Mentored a team member through a challenging acquisition integration, enabling them to successfully generate $50k per day in new business revenue.</li>
                 
                 
 
