--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <h1>David Vilardo</h1>
             <p>www.linkedin.com/in/vilardo</p>
-            <p>FUCK YOU! Greater New York City/Philadelphia Metropolitan Area</p>
+            <p>Did it! Greater New York City/Philadelphia Metropolitan Area</p>
             <p>(267) 275-4822 | davidvilardo@gmail.com</p>
         </header>
 
