--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h3>General Electric, Boston, MA (2002 – 2018)</h3>
             <h4>Network Build Lead, Trevose, PA (2012 - 2018)</h4>
             <ul>
-                <li>Led complex network integration of $500M (revenue) acquisition target, overcoming organizational resistance to achieve seamless technical transition. Managed stakeholder relationships and cultural integration challenges while maintaining operational continuity.</li>
+                <li>Led complex network integration of ($500M revenue impact) acquisition target, overcoming organizational resistance to achieve seamless technical transition. Managed stakeholder relationships and cultural integration challenges while maintaining operational continuity.</li>
                 <li>Drove performance improvements across 13 critical business sites through effective subsidiary leadership negotiation. Secured executive buy-in for infrastructure upgrades and implemented systematic solutions to eliminate recurring technical issues, protecting millions in revenue streams.</li>
                 <li>Salvaged at-risk $480M revenue project through swift risk mitigation and team restructuring. Identified personnel conflicts, strategically reassigned resources, and brought in additional support to ensure successful project completion.</li>
                 <li>Generated $600,000 annual cost savings by discovering and restructuring unauthorized third-party network connections. Established formal governance processes and stakeholder accountability, resulting in reduced hardware and circuit expenses.</li>
